# AI_Assistant_RAG_LangChain

./: .env  README.md  pyproject.toml
rag-demo/: agent_base.py  rag_chatbot_hf.py  test1.txt
